# llumdocs

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile  Procfile  README.md  SETUP_GPU.md  docker-compose.yml  entrypoint-ollama.sh  install-nvidia-container-toolkit.sh  wait-for-ollama.sh
docs/: ARCHITECTURE.md  GUI_SCREENSHOTS.md  INSTALL.md  LLM_DEVELOPMENT_GUIDE.md  LLM_FEATURE_SPECS.md  LLM_GUIDE_GLOBAL.md  README_LlumDocs.md  TESTING.md
llumdocs/: __init__.py  llm.py  settings.py
llumdocs/api/: app.py  document_extraction_endpoints.py  error_handling.py  image_endpoints.py  text_tools_endpoints.py  translation_endpoints.py
llumdocs/document_extraction/: __init__.py  settings.py  unified_extractor.py  unified_visualizer.py
llumdocs/document_extraction/albaran/: __init__.py  models.py
llumdocs/document_extraction/bank/: __init__.py  models.py
llumdocs/document_extraction/core/: __init__.py  extractor.py  ocr.py
llumdocs/document_extraction/core/visualizer/: __init__.py  common.py  image.py  pdf.py
llumdocs/document_extraction/document_config/: __init__.py  config.py
llumdocs/document_extraction/document_config/legends/: __init__.py  albaran.py  bank.py  payroll.py
llumdocs/document_extraction/document_config/redaction/: __init__.py  default.py  payroll.py
llumdocs/document_extraction/ocr/: __init__.py  base.py  factory.py  rapidocr_engine.py  tesseract_engine.py
llumdocs/document_extraction/payroll/: __init__.py  models.py
llumdocs/services/: __init__.py  document_extraction_service.py  email_intelligence_service.py  image_description_service.py  ollama_client.py  text_transform_common_service.py  text_transform_keywords_service.py  text_transform_service.py  text_transform_simplify_service.py  text_transform_summary_service.py  text_transform_technical_service.py  translation_service.py
llumdocs/services/text_transform_service/: __init__.py  common.py  company_tone.py  keywords.py  simplify.py  summary.py  technical.py
llumdocs/ui/: components.py  error_messages.py  layout.py  main.py
llumdocs/ui/panels/: __init__.py  common.py  document_extraction.py  email_intelligence.py  image.py  keywords.py  summary.py  text_transformation.py  translation.py
setup/: README.md  example_litellm.py  example_litellm_gradio.py  pyproject.toml
tests/: test_api_endpoints.py  test_document_extraction_service.py  test_email_intelligence_integration.py  test_email_intelligence_service.py  test_image_description_service.py  test_llm.py  test_text_transform_service.py  test_translation_service.py  test_ui_smoke.py
tests/integration/: test_image_description_live.py  test_text_tools_live.py  test_translation_live.py
tests/sample_texts/text_transform/: simplify_guidance_en.txt  summary_brief_en.txt  technical_brief_en.txt
tests/sample_texts/translation/: customer_email_en.txt  lab_report_es.txt  project_update_ca.txt
